@@ -1,13 +1,23 @@
 package ransomaware;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.time.*;
+import java.net.*;
+import java.net.http.*;
+import java.net.http.HttpClient.*;
+import java.net.http.HttpRequest.*;
+import java.net.http.HttpResponse.*;
 import java.security.cert.Certificate;
 import java.io.*;
+import java.nio.file.*;
+import java.util.Base64;
+import com.google.gson.*;
+import java.util.concurrent.*;
 
 import javax.net.ssl.*;
 
 public class Client {
+    static ExecutorService executor = Executors.newSingleThreadExecutor();
+    static HttpClient client = HttpClient.newBuilder().executor(executor).build();
 
     public static void start() {
         Console console = System.console();
@@ -33,72 +43,161 @@ public class Client {
                     getFile(args);
                     break;
                 // send file.txt
-                case ("send"):
-                    sendFile(args);
+                case ("save"):
+                    saveFile(args);
+                    break;
+                // login
+                case ("login"):
+                    login(args);
+                    break;
+                case ("help"):
+                    // TODO: Show commands
+                    break;
+                case ("exit"):
                     break;
                 default:
                     System.out.println("Command not found.");
             }
 
         } while (!command.equals("exit"));
+
+        // Shutdown HTTP Client
+        executor.shutdownNow();
+        client = null;
+        System.gc();
     }
 
+    /**
+     * getFile
+     * @param args - for example: ['get','a.txt'] or ['get','masterzeus','a.txt']
+     */
     public static void getFile(String[] args) {
         if (args.length == 1 || args.length > 2) {
             System.out.println("get: Too many arguments.\nExample: get a.txt");
             return;
         }
         String file[] = args[1].split("/"), user = "", filename = "";
-        if (file.length == 1) { user = "me"; filename = file[0]; }
+        if (file.length == 1) { user = ""; filename = file[0]; }
         else if (file.length == 2) { user = file[0]; filename = file[1]; }
+
+        try {
+            // TODO: Send request to get file
+            // TODO: Write file
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
 
         System.out.println(user + " - " + filename);
     }
 
-    public static void sendFile(String[] args) {
+    /**
+     * saveFile
+     * @param args - for example: ['save','a.txt'] or ['save','masterzeus','a.txt']
+     */
+    public static void saveFile(String[] args) {
         if (args.length == 1 || args.length > 2) {
-            System.out.println("send: Too many arguments.\nExample: send a.txt");
+            System.out.println("save: Too many arguments.\nExample: save a.txt");
             return;
         }
-        String file[] = args[1].split("/"), user = "", filename = "";
-        if (file.length == 1) { user = "me"; filename = file[0]; }
-        else if (file.length == 2) { user = file[0]; filename = file[1]; }
+        String givenFile[] = args[1].split("/"), user = "", filename = "";
+        if (givenFile.length == 1) { user = ""; filename = givenFile[0]; }
+        else if (givenFile.length == 2) { user = givenFile[0]; filename = givenFile[1]; }
 
-        System.out.println(user + " - " + filename);
+        try {
+            String filePath = ClientVariables.FS_PATH + '/' + user + '/' + filename;
+
+            // Check if file exists
+            File file = new File(filePath);
+            if (!file.exists()) {
+                System.out.println("File not found.");
+                return;
+            }
+
+            // Read file to bytes
+            byte[] data = Files.readAllBytes(Path.of(filePath));
+
+            // Pass string file to base64
+            String encodedData = SecurityUtils.getBase64(data);;
+
+            // Create JSON
+            JsonObject jsonRoot = JsonParser.parseString("{}").getAsJsonObject();
+            jsonRoot.addProperty("data", encodedData);
+            JsonObject jsonInfo = JsonParser.parseString("{}").getAsJsonObject();
+            jsonInfo.addProperty("user", user);
+            jsonInfo.addProperty("name", filename);
+            jsonRoot.add("info", jsonInfo);
+
+            System.out.println(jsonRoot);
+
+            // Send request
+            requestPostFromURL(ClientVariables.URL + "/save", jsonRoot);
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
+
+    /**
+     * login
+     * @param args
+     */
+    public static void login(String[] args) {
+        if (args.length != 1) {
+            System.out.println("login: Too many arguments.\nExample: login");
+            return;
+        }
+
+        Console console = System.console();
+        String user = console.readLine("user: ");
+        String password = new String(console.readPassword("password: "));
+
+        // Create JSON
+        JsonObject jsonRoot = JsonParser.parseString("{}").getAsJsonObject();
+        jsonRoot.addProperty("username", user);
+        jsonRoot.addProperty("password", password);
+
+        // Send request
+        String response = requestPostFromURL(ClientVariables.URL + "/login", jsonRoot);
+        System.out.println("Response: " + response);
+
+    }
+
+    // ----
 
     public static String requestGetFromURL(String url) {
         try {
-            // TODO: use custom keystore if desired
-//            System.setProperty("javax.net.ssl.trustStore", ClientVariables.KEYSTORE);
-//            System.setProperty("javax.net.ssl.trustStorePassword", ClientVariables.SSL_STOREPASS);
-            URL myUrl = new URL(url);
-            HttpsURLConnection conn = (HttpsURLConnection) myUrl.openConnection();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .build();
 
-            // We bypass the hostname verifier, since we don't use a root CA
-            conn.setHostnameVerifier(new HostnameVerifier() {
-                public boolean verify(String hostname, SSLSession session) {
-                    return true;
-                }
-            });
-            InputStream is = conn.getInputStream();
-            InputStreamReader isr = new InputStreamReader(is);
-            BufferedReader br = new BufferedReader(isr);
+            HttpResponse<String> response =
+                    client.send(request, BodyHandlers.ofString());
 
-            String inputLine;
-            StringBuilder output = new StringBuilder();
-
-            while ((inputLine = br.readLine()) != null) {
-                // System.out.println(inputLine);
-                output.append(inputLine + '\n');
-            }
-
-            br.close();
-
-            return output.toString();
+            return response.body();
         } catch (Exception e) {
-            //FIXME: UGLY
-            System.out.println(e.getMessage());
+            // FIXME: UGLY
+            e.printStackTrace();
+            System.exit(1);
+        }
+
+        return "";
+    }
+
+    public static String requestPostFromURL(String url, JsonObject jsonObject) {
+        try {
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .header("Content-Type", "application/json")
+                    .POST(BodyPublishers.ofString(jsonObject.toString()))
+                    .build();
+            HttpResponse<String> response = client.send(request, BodyHandlers.ofString());
+
+            return response.body();
+        } catch (Exception e) {
+            // FIXME: UGLY
+            e.printStackTrace();
             System.exit(1);
         }
 
